--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=7.2.15",
         "algolia/algoliasearch-client-php": "2.2",
+        "braintree/braintree_php": "^4.3",
         "cartalyst/stripe": "~2.0",
         "fideloper/proxy": "~4.0",
         "hardevine/shoppingcart": "2.6.2.1",
